added css to subsequent pages/buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,17 @@ color:blue;
 font-size:36px;
 font-style:italic;
 text-align:center;
-font-family:'Verdana','Times New Roman','sans-serif';
-
+font-family:'Verdana','Dejavu Sans','Times New Roman','sans-serif';
 }
 div{
 background-color:rgb (red);
 color:whitesmoke;
 font-size:32px;
 text-align:center;
+}
+button{
+background-color:blueviolet;
+color:white;
+text-align:center;
+font: weight 100px;
 }
